# cookiecutter-poetry-base

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: README.md  mypy.ini  pyproject.toml  tox.ini
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/: app.py
