[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.description}}"
authors = ["{{cookiecutter.author}} <{{cookiecutter.email}}>"]

[tool.poetry.dependencies]
python = "^3.8.5"

[tool.poetry.dev-dependencies]
nitpick = "^0.27.0"
wemake-python-styleguide = "^0.15.3"
mypy = "^0.910"
tox = "^3.24.3"
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
pytest-sugar = "^0.9.4"
pytest-mock = "^3.6.1"
pytest-xdist = "^2.3.0"
pytest-randomly = "^3.10.1"
pytest-clarity = "^1.0.1"

[tool.poetry.extras]
lint = ["pylint"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.nitpick]
style = "https://raw.githubusercontent.com/hamedsh/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"

[tool.pytest.ini_options]
addopts = "--cov={{cookiecutter.project_name}} --cov-report=xml"

